update header to break up code and make it more readable. still need to fix navigation and styling using modules

--- a/app/globals.css
+++ b/app/globals.css
@@ -20,10 +20,6 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-#logo-text {
-  font-size: 1.6rem;
-}
-
 #text {
   font-size: 1.2rem;
 }
